# svg

./: .gitignore  CMakeLists.txt  README.md
include/: common.h  document.h  figures.h
include/svg/: common.h  document.h  figures.h
src/: common.cpp  document.cpp  figures.cpp
tests/: figures_tests.cpp
